--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "start": "vercel dev"
   },
   "dependencies": {
-    "stripe": "^10.0.0"  // Make sure the latest version of Stripe is used
+    "stripe": "^10.0.0"
   }
 }
