--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
-{
-  "name": "nichecraft-automation",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "vercel dev"
-  },
-  "dependencies": {
-    "stripe": "^10.0.0"
-  }
-}
+const session = await stripe.checkout.sessions.create({
+    payment_method_types: ['card'],
+    line_items: [
+        {
+            price_data: {
+                currency: 'usd',
+                product_data: {
+                    name: 'Service Payment',
+                },
+                unit_amount: 5000, // Amount in cents ($50)
+            },
+            quantity: 1,
+        },
+    ],
+    mode: 'payment',
+    success_url: `${req.headers.origin}/success?session_id={CHECKOUT_SESSION_ID}`, // Correct URL for success page
+    cancel_url: `${req.headers.origin}/cancel`, // Correct URL for cancel page
+});
