--- a/package.json
+++ b/package.json
@@ -1,10 +1,2 @@
-{
-  "name": "nichecraft-automation",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "vercel dev"
-  },
-  "dependencies": {
-    "stripe": "^10.0.0"
-  }
-}
+success_url: `${req.headers.origin}/success.html?session_id={CHECKOUT_SESSION_ID}`,
+cancel_url: `${req.headers.origin}/cancel.html`,
